--- a/Meta-analysis_Acute.Rmd
+++ b/Meta-analysis_Acute.Rmd
@@ -23,7 +23,6 @@ library(glmGamPoi)
 library(readxl)
 library(EnhancedVolcano)
 library(BiocParallel)
-library(tidyr)
 library(speckle)
 library(presto)
 library(enrichplot)
@@ -35,7 +34,7 @@ library(patchwork)
 library(tibble)
 ```
 
-1. First of all, we need to prepare the three datasets for integration. One of the most important points is standarize the labels of the dataset.The different datasets are already filtered by QC metrics. (% mitochondrial < 0.2, no doublets, nCounts > 200)
+1. First of all, we need to prepare the three datasets for integration. One of the most important points is standarize the labels of the dataset.The different datasets are already filtered by QC metrics. (% mitochondrial < 0.2, no doublets)
 
 
 Dataset Milich 
@@ -58,7 +57,7 @@ colnames(matrix) <- rownames(barcodes)
 ```
 
 ```{r}
-seurat <- CreateSeuratObject(matrix,assay = "RNA", project = "Milich_2021", meta.data = metadata, min.cells = 50, min.features = 100)
+seurat <- CreateSeuratObject(matrix,assay = "RNA", project = "Milich_2021", meta.data = metadata, min.cells = 10, min.features = 100)
 
 remove_features <- nrow(matrix) - nrow(seurat)
 remove_cells <- ncol(matrix) - ncol(seurat)
@@ -77,7 +76,7 @@ rm(matrix,barcodes,metadata,features)
 Dataset Matson 2022
 
 ```{r}
-matrix2 <- matrix2 <- readRDS("~/R/Data/Dataset2.rds")
+matrix2 <- readRDS("~/R/Data/Dataset2.rds")
 ```
 
 ```{r}
@@ -108,7 +107,7 @@ metadata2$dataset <- "Matson_2022"
 ```
 
 ```{r}
-seurat2 <- CreateSeuratObject(counts2, assay = "RNA", project = "Matson_2022 (Single cell Atlas)", meta.data = metadata2, min.cells = 50, min.features = 100)
+seurat2 <- CreateSeuratObject(counts2, assay = "RNA", project = "Matson_2022 (Single cell Atlas)", meta.data = metadata2, min.cells = 10, min.features = 100)
 
 remove_features2 <- nrow(matrix2) - nrow(seurat2)
 remove_cells2 <- ncol(matrix2) - ncol(seurat2)
@@ -160,7 +159,7 @@ metadata3$dataset <- "Skinnider_2024"
 ```
 
 ```{r}
-seurat3  <- CreateSeuratObject(matrix3, assay = "RNA", project = "Skinnider_2024 (Tabulae Paralytica)",  meta.data = metadata3, min.cells = 50, min.features = 100)
+seurat3  <- CreateSeuratObject(matrix3, assay = "RNA", project = "Skinnider_2024 (Tabulae Paralytica)",  meta.data = metadata3, min.cells = 10, min.features = 100)
 
 remove_features3 <- nrow(matrix3) - nrow(seurat3)
 remove_cells3 <- ncol(matrix3) - ncol(seurat3)
@@ -336,16 +335,26 @@ rm(seurat2_norm, seurat_norm, seurat3_norm)
 Integrate the three datasets and scale the integrated seurat object.
 
 ```{r}
+ecm <- read_excel("~/R/Data/MAIN_ECM_Proteome.xlsx")
+genes_of_interest <- ecm$Gene
+
+features <- c(features, genes_of_interest)
+
+features <- unique(features)
+
+features <- intersect(features, rownames(seurat_list[[1]]))
+features <- intersect(features, rownames(seurat_list[[2]])) 
+features <- intersect(features, rownames(seurat_list[[3]]))
 
 gc()
-anchors_integration <- FindIntegrationAnchors(object.list = seurat_list, dims = 1:30, verbose = TRUE, reduction = "cca", anchor.features = features, scale = F, normalization.method = "LogNormalize", k.anchor = 50)
+anchors_integration <- FindIntegrationAnchors(object.list = seurat_list, dims = 1:30, verbose = TRUE, reduction = "rpca", anchor.features = features, scale = F, normalization.method = "LogNormalize", k.anchor = 50)
 
 gc()
-seurat_integrated <- IntegrateData(anchorset = anchors_integration, dims = 1:30, verbose = TRUE, normalization.method = "LogNormalize")
+seurat_integrated <- IntegrateData(anchorset = anchors_integration, dims = 1:30, verbose = TRUE, normalization.method = "LogNormalize") 
 
 rm(seurat_list, anchors, anchors_integration)
 
-save.image(file = "~/R/Downloads/Acute_Data.RData")
+save.image(file = "~/R/Downloads/Acute_Data_RPCA.RData")
 ```
 
 * Correct metadata issues
@@ -519,7 +528,7 @@ adjust <- c("S.Score","G2M.Score")
 
 Idents(seurat_integrated_ME) <- "time"
 
-DEG <- FindMarkers(seurat_integrated_ME,  ident.1 = "7dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = adjust)
+DEG <- FindMarkers(seurat_integrated_ME,  ident.1 = "7dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.02, test.use = "MAST", layer = "data", latent.vars = adjust)
 
 DEG$Gene <- rownames(DEG)
 
@@ -533,7 +542,7 @@ ggsave("~/R/Figures/Volcano_Acute.png", volcanoplot, dpi = 1080, height = 7, wid
 
 ##############################################################################################################
 
-DEG2 <- FindMarkers(seurat_integrated_ME,  ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data",  latent.vars = adjust)
+DEG2 <- FindMarkers(seurat_integrated_ME,  ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.02, test.use = "MAST", layer = "data",  latent.vars = adjust)
 
 DEG2$Gene <- rownames(DEG2)
 
@@ -595,7 +604,7 @@ Enrichment analysis
 
 ```{r}
 
-relevant_genes <- subset(DEG, p_val_adj < 0.05 & abs(avg_log2FC) > 0.75)
+relevant_genes <- subset(DEG, p_val_adj < 0.05 & abs(avg_log2FC) > 0.5)
 
 relevant_genes <- rownames(relevant_genes)
 
@@ -607,8 +616,8 @@ go_enrich <- enrichGO(
   gene = deg_entrez,
   OrgDb = org.Mm.eg.db,
   keyType = "ENTREZID", 
-  ont = "BP"
-)
+  ont = "BP", qvalueCutoff =  0.1,
+  pAdjustMethod = "fdr")
 
 go_terms <- go_enrich@result[["Description"]]
 
@@ -699,11 +708,20 @@ DEG_oligodendrocyte$celltype <- "Oligodendrocytes"
 
 combined_results <- bind_rows(DEG_astro, DEG_neuron, DEG_microglia, DEG_opc, DEG_oligodendrocyte, DEG_endothelial)
 
+datasets <- list(DEG_astro, DEG_neuron, DEG_microglia, DEG_opc, DEG_oligodendrocyte, DEG_endothelial)
+
+top_gene_names <- unlist(lapply(datasets, function(df) {
+  df_sorted <- df[order(df$avg_log2FC, decreasing = TRUE), ]
+  top2_up_genes <- head(df_sorted$Gene, 2)
+  top2_down_genes <- tail(df_sorted$Gene, 2)
+  c(top2_up_genes, top2_down_genes)
+}))
+
 genes_up <- DEG_upregulated$Gene
 genes_down <- DEG_downregulated$Gene
 
 combined_results <- combined_results %>%
-  filter(Gene %in% genes_down | Gene %in% genes_up)
+  filter(Gene %in% genes_down | Gene %in% genes_up | Gene %in% top_gene_names)
 
 heatmap_data <- combined_results %>%
   select(Gene, celltype, avg_log2FC) %>%
@@ -732,7 +750,7 @@ Enrichment analysis
 
 ```{r}
 
-relevant_genes2 <- subset(DEG2, p_val_adj < 0.05 & abs(avg_log2FC) > 0.75)
+relevant_genes2 <- subset(DEG2, p_val_adj < 0.05 & abs(avg_log2FC) > 0.5)
 
 relevant_genes2 <- rownames(relevant_genes2)
 
@@ -744,8 +762,8 @@ go_enrich2 <- enrichGO(
   gene = deg_entrez2,
   OrgDb = org.Mm.eg.db,
   keyType = "ENTREZID", 
-  ont = "BP"
-)
+  ont = "BP", qvalueCutoff =  0.1,
+  pAdjustMethod = "fdr")
 
 go_terms2 <- go_enrich2@result[["Description"]]
 
@@ -821,8 +839,17 @@ combined_results2 <- bind_rows(DEG_astro2, DEG_neuron2, DEG_microglia2, DEG_opc2
 genes_up <- DEG_upregulated2$Gene
 genes_down <- DEG_downregulated2$Gene
 
+datasets <- list(DEG_astro2, DEG_neuron2, DEG_microglia2, DEG_opc2, DEG_oligodendrocyte2, DEG_endothelial2)
+
+top_gene_names2 <- unlist(lapply(datasets, function(df) {
+  df_sorted <- df[order(df$avg_log2FC, decreasing = TRUE), ]
+  top2_up_genes <- head(df_sorted$Gene, 2)
+  top2_down_genes <- tail(df_sorted$Gene, 2)
+  c(top2_up_genes, top2_down_genes)
+}))
+
 combined_results2 <- combined_results2 %>%
-  filter(Gene %in% genes_down | Gene %in% genes_up)
+  filter(Gene %in% genes_down | Gene %in% genes_up | Gene %in% top_gene_names2)
 
 heatmap_data2 <- combined_results2 %>%
   select(Gene, celltype, avg_log2FC) %>%
